Revise README for Java SimConnect project
Updated README.md to provide a comprehensive overview of the Java SimConnect project, including usage examples, features, and additional utilities.